# DeBruijn

./: CMakeLists.txt  LICENSE  Makefile  README.md  debruijn  debruijn.cpp  debruijn.h  get_it  k=10_relval.txt  k=11_10stim_linear.txt  k=11_9stim_linear.txt  k=13_12stim_linear.txt  k=5.txt  k=6_5stim_linear.txt
exampleNeuralMatrices/: k=10_absval.txt  k=10_cityblock.txt  k=11_9stim_circular.txt  k=17_16stim_dioct.txt  k=3.txt  k=4.txt  k=8.txt
